Refactor forms again. Refactor TelegramView. Add PathUtil.